--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - PORT=7000
     volumes:
-      - ./all.json:/app/all.json
+      - ./files.json:/app/files.json
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.stremio-addon.rule=Host(`stremio-addon.ramondev.site`)"
